# tsuno

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml
src/: lib.rs
src/lu/: eta_update.rs  initial_factorize.rs  lower.rs  mod.rs  solve.rs  solve_transposed.rs  test_support.rs  upper.rs
src/simplex/: basis.rs  dual.rs  iis.rs  mod.rs  primal.rs  revised_simplex.rs  standard_form.rs  state.rs  warm_start.rs
src/simplex/basis/: eta.rs  mod.rs  representation.rs  tests.rs
src/simplex/primal/: phase_one.rs  tests.rs
src/simplex/primal/snapshots/: tsuno__simplex__primal__phase_one__tests__phase_one_returns_original_feasible_basis.snap  tsuno__simplex__primal__phase_one__tests__simplex_solve_normalizes_negative_right_hand_side.snap  tsuno__simplex__primal__phase_one__tests__simplex_solve_records_phase_one_and_phase_two_trace.snap  tsuno__simplex__primal__phase_one__tests__simplex_solve_records_phase_one_iteration_limit_trace.snap  (+4 more)
src/simplex/revised_simplex/: dual.rs  mod.rs  phase_one.rs  tests.rs  trace.rs
src/simplex/snapshots/: tsuno__simplex__dual__tests__dual_revised_simplex_solve_returns_infeasible_result.snap  tsuno__simplex__dual__tests__dual_revised_simplex_solve_returns_iteration_limit_solution.snap  tsuno__simplex__dual__tests__dual_revised_simplex_solve_returns_optimal_solution.snap  tsuno__simplex__revised_simplex__tests__revised_simplex_solve_trace_snapshot.snap
tsuno-lu/: Cargo.toml  README.md
tsuno-lu/src/: eta_update.rs  initial_factorize.rs  lib.rs  lower.rs  solve.rs  solve_transposed.rs  test_support.rs  upper.rs
(+10 files in other folders)
